--- a/03-html-forms/css/forms.css
+++ b/03-html-forms/css/forms.css
@@ -7,20 +7,23 @@ html {
   box-sizing: inherit;
 }
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
+  background-image: url('../img/galaxy.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .wrapper {
+  display: flex;
+  flex-flow: row nowrap;
   width: 80%;
   margin: 0 auto;
   padding: 1em;
-  display: flex;
-  flex-flow: row nowrap;
-}
-p {
-  margin-bottom: 0;
-  margin-top: 2rem;
+  border-radius: 10px;
+  background-color: #f4f4f4;
 }
 section {
   flex-basis: 57%;
@@ -28,4 +31,57 @@ section {
 }
 aside {
   flex-basis: 33%;
+}
+p {
+  margin-bottom: 0;
+  margin-top: 2rem;
+}
+fieldset {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+legend {
+  margin-bottom: 1rem;
+  background-color: #000;
+  color: #fff;
+  padding: 0.2rem 0.4rem;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+}
+label {
+  display: block;
+}
+textarea {
+  height: 10rem;
+  padding: 1rem;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+select {
+  font-size: 1rem;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+button {
+  margin: 2rem 0;
+  padding: 1rem 2rem;
+  width: 100%;
+  border: none;
+  border-radius: 5px;
+  background-color: #000;
+  color: #fff;
+  font-size: 1rem;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+input {
+  padding: 0.2rem;
+  border: 1px solid #000;
+  border-radius: 5px;
 }
